--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,35 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Image Cropping</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="cropImage()" *ngIf="myImage">
+        <ion-icon slot="icon-only" name="checkMark"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-button (click)="selectImage()" expand="full" *ngIf="!myImage"> Select Image</ion-button>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-row *ngIf="myImage">
+    <ion-col size="3" class="ion-text-center">
+      <ion-button fill="clear" (click)="rotate()">
+        <ion-icon name="refresh" slot="start"></ion-icon> Rotate
+      </ion-button>
+    </ion-col>
+    <ion-col size="3" class="ion-text-center">
+      <ion-button fill="clear" (click)="flipHorizontal()"> Flip X </ion-button>
+    </ion-col>
+    <ion-col size="3" class="ion-text-center">
+      <ion-button fill="clear" (click)="flipVertical()"> Flip Y </ion-button>
+    </ion-col>
+    <ion-col size="3" class="ion-text-center">
+      <ion-button fill="clear" (click)="discardChanges()"> Discard </ion-button>
+    </ion-col>
+  </ion-row>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <image-cropper #cropper [autoCrop]="false" [imageBase64]="myImage" [hideResizeSquares]="isMobile"
+    [maintainAspectRatio]="true" [aspectRatio]="1 / 1" format="png" (imageLoaded)="imageLoaded()"
+    (loadImageFailed)="loadImageFailed()" [transform]="transform"></image-cropper>
+  <img [src]="croppedImage" *ngIf="croppedImage">
 </ion-content>
